tests/__snapshots__/validation-target-not-supported-version-within-union-stderr.snap.txt
Error: The TypeScript version 'new' is not supported.

Use the '--list' command line option to inspect the list of supported versions.

  1 | {
  2 |   "target": ">=5.6 <=5.8 || new",
    |             ~~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.tst.*"
  5 |   ]

      at ./tstyche.json:2:13

